# apex

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: scripts.py
backend/app/: main.py  schemas.py
backend/app/agents/: factcheck.py  research.py  synthesis.py
backend/app/core/: __init__.py  agent.py  lifecycle.py  llm_service.py  logging_config.py  middleware.py  registry.py  tool.py
backend/app/core/observability/: __init__.py  base.py  factory.py  phoenix_provider.py
backend/app/graph/: workflow.py
backend/app/server/: __init__.py  handler.py  routes.py
backend/app/tools/: __init__.py  fetch_tool.py  search.py  search_tool.py
ui/: streamlit_app.py
