[project]
name = "apex"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
description = "Apex - AI Research Assistant powered by LangGraph, Ollama, and FastAPI"
readme = "README.md"

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.10.5",
  "httpx==0.27.2",
  "langchain==0.3.14",
  "langchain-ollama==0.2.2",
  "langchain-openai>=0.3.0",
  "langgraph==0.2.64",
  "python-dotenv>=1.0.0",
  "opentelemetry-api==1.26.0",
  "opentelemetry-sdk==1.26.0",
  "opentelemetry-exporter-otlp-proto-http==1.26.0",
  "arize-phoenix==12.30.0",
  "openinference-instrumentation-langchain==0.1.20",
  "duckduckgo-search==6.3.7",
  "wikipedia==1.4.0",
  "arxiv==2.1.3",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "streamlit==1.41.1",
  "arize-phoenix>=12.30.0",
]

[project.scripts]
backend = "backend.scripts:run_backend"
ui = "backend.scripts:run_ui"
phoenix-serve = "backend.scripts:run_phoenix"
dev = "backend.scripts:run_dev"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.uv]
package = true

